vllm-cpu/ocp/deploy.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: vllm-bootc-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-bootc-demo
  template:
    metadata:
      labels:
        app: vllm-bootc-demo
        deployment: vllm-bootc-demo
    spec:
      volumes:
        - name: cache-volume
          emptyDir:
            sizeLimit: 10Gi
      containers:
        - name: vllm-bootc-demo
          command:
            - /usr/local/bin/initializer-entrypoint.sh
          ports:
            - containerPort: 8000
              protocol: TCP
          image: 'rhoim-bootc-rhel:latest'
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cache-volume
              mountPath: /.cache
          resources:
            limits:
              cpu: '4'
              memory: 16Gi
            requests:
              cpu: '2'
              memory: 8Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 120

---

kind: Service
apiVersion: v1
metadata:
  name: vllm-bootc-demo
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
  selector:
    app: vllm-bootc-demo
    deployment: vllm-bootc-demo

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vllm-bootc-demo
spec:
  to:
    kind: Service
    name: vllm-bootc-demo
    weight: 100
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
